Leetcode113: Adding iterative solution